# random-useragent

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
examples/: random_ua.py
random_useragent/: __init__.py  android.py  android_data.json  chrome.py  iphone.py  linux.py  mac.py  useragent.py  windows.py
ruser_agent/: __init__.py  android.py  android_data.json  chrome.py  linux.py  mac.py  useragent.py
user_agent/: android.py  chrome.py  test.py  useragent.py  windows.py
